fix: fix click target too close issue

--- a/assets/scss/layout-md/_flex.scss
+++ b/assets/scss/layout-md/_flex.scss
@@ -56,6 +56,10 @@
   justify-content: space-evenly;
 }
 
+.flex-md-justify-space-around {
+  justify-content: space-around;
+}
+
 .d-md-flex {
   flex-direction: row;
 
