--- a/assets/scss/layout-sm/_flex.scss
+++ b/assets/scss/layout-sm/_flex.scss
@@ -56,6 +56,10 @@
   justify-content: space-evenly;
 }
 
+.flex-sm-justify-space-around {
+  justify-content: space-around;
+}
+
 .d-sm-flex {
   flex-direction: row;
 
